@@ -1,3 +1,9 @@
+2002-02-14  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Try to cope with more possible HTTP errors in
+	fetchPage, msgSend and onlinePage procs. Should always schedule
+	another fetch.
+
 2002-02-01  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkchat.tcl: correct warnings that procheck noted.
